syntax = "proto3";

package user.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";

option go_package = "github.com/nikola-enter21/devops-fmi-course/api/proto/gen/go/user/v1;user";

service UserService {
  rpc Healthz(HealthzRequest) returns (HealthzResponse) {
    option (google.api.http) = {get: "/api/v1/healthz"};
  }

  rpc CheckDatabase(CheckDatabaseRequest) returns (CheckDatabaseResponse) {
    option (google.api.http) = {get: "/api/v1/checkDatabase"};
  }

  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/api/v1/login"
      body: "*"
    };
  }

  rpc Register(RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/api/v1/register"
      body: "*"
    };
  }
}

message HealthzRequest {}
message HealthzResponse {
  string status = 1;
}

message CheckDatabaseRequest {}

message CheckDatabaseResponse {
  string db_status = 1;
}

message LoginRequest {
  string username = 1 [(buf.validate.field).string = {
    min_len: 3
    max_len: 50
    pattern: "^[a-zA-Z0-9_]+$"
  }];

  string password = 2 [(buf.validate.field).string = {
    min_len: 8
    max_len: 128
  }];
}

message LoginResponse {
  string token = 1;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message RegisterResponse {
  string id = 1;
  string message = 2;
}
